--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,28 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.15.0",
     "axios": "^1.5.0",
     "chart.js": "^4.4.0",
-    "react-chartjs-2": "^5.2.0",
+    "framer-motion": "^10.16.4",
     "lucide-react": "^0.279.0",
+    "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
-    "framer-motion": "^10.16.4"
+    "react-router-dom": "^6.15.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.15",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.45.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "postcss": "^8.4.29",
-    "tailwindcss": "^3.3.3",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "vite": "^4.4.5"
   }
 }
-
