--- a/backend/package.json
+++ b/backend/package.json
@@ -2,27 +2,27 @@
   "name": "mgnrega-backend",
   "version": "1.0.0",
   "description": "MGNREGA District Performance Dashboard Backend",
-  "main": "server.js",
+  "main": "real_server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js",
+    "start": "node real_server.js",
+    "dev": "nodemon real_server.js",
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "mongoose": "^7.5.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "axios": "^1.5.0",
-    "node-cron": "^3.0.2",
+    "axios": "^1.13.1",
     "compression": "^1.7.4",
-    "helmet": "^7.0.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.6.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
-    "node-cache": "^5.1.2"
+    "helmet": "^7.0.0",
+    "mongoose": "^7.5.0",
+    "node-cache": "^5.1.2",
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "jest": "^29.6.4"
+    "jest": "^29.6.4",
+    "nodemon": "^3.0.1"
   },
   "keywords": [
     "mgnrega",
